# vfarm-device-sdk

./: CHANGELOG.md  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml  deploy-docs-render.yml  publish-pypi.yml  publish-testpypi.yml
contracts/: openapi_source.json  sdk_compatibility_matrix.json  sdk_model_schema_snapshot.json  sdk_openapi_mapping.json  upstream_openapi_snapshot.json
docs/: DOCS_CONTRIBUTING.md  PUBLISHING.md  RELEASE_CHECKLIST.md  RENDER_DOCS_DEPLOYMENT.md  SDK_COMPATIBILITY.md  SDK_DOCS_PLAN.md  SDK_DOCS_STAGE_CHECKLIST.md  SDK_USAGE.md  bhavfarm-analysis.md  command-layer-sdk-draft.md
docs-site/: Makefile  conf.py  docstring_template.rst  index.rst  make.bat
docs-site/api/: async_apis.rst  internals.rst  models_exceptions.rst  sync_apis.rst
docs-site/error_codes/: endpoint_matrix.rst  index.rst
examples/: _common.py  commands_example.py  events_example.py  farms_example.py  readings_analytics_example.py  register_device.py  thresholds_example.py
python/vfarm_device_sdk/: __init__.py  alerts.py  async_alerts.py  async_automation.py  async_capabilities.py  async_capability_groups.py  async_client.py  async_commands.py  async_device_capabilities.py  async_devices.py  async_events.py  async_farms.py  async_ingestion.py  async_readings.py  async_sensor_types.py  client.py  (+17 more)
scripts/: check_contract_snapshot.py  check_docs_completeness.py  check_openapi_breaking.py  check_sdk_openapi_compat.py  check_stage2_modules_docs.py  check_stage3_modules_docs.py  check_stage4_part1_async_docs.py  release_guard.py  render_compat_matrix.py
(+102 files in other folders)
