[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vfarm-device-sdk"
version = "0.1.0"
description = "Python client SDK for interacting with the Bhavfarm vfarm API."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.26,<1",
  "pydantic>=2.6,<3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9"
]

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]
